# envpatch

./: .gitignore  README.md  pyproject.toml
docs/: alias.md  encryption.md  freeze.md  inject.md  require.md  split.md  typecheck.md
envpatch/: aliaser.py  archiver.py  auditor.py  caster.py  cli.py  cli_alias.py  cli_archive.py  cli_cast.py  cli_convert.py  cli_dedup.py  cli_defaults.py  cli_duplicates.py  cli_encrypt.py  cli_filter.py  cli_flatten.py  cli_freeze.py  cli_group.py  cli_inject.py  cli_interpolate.py  cli_lint.py  cli_normalize.py  cli_pin.py  cli_prefix.py  cli_profile.py  cli_rename.py  cli_require.py  cli_sanitize.py  cli_scope.py  cli_score.py  cli_split.py  cli_stack.py  cli_strip.py  cli_template.py  cli_typecheck.py  cloner.py  comparator.py  converter.py  deduplicator.py  defaults.py  differ.py  (+39 more)
tests/: test_aliaser.py  test_archiver.py  test_auditor.py  test_caster.py  test_cli.py  test_cli_alias.py  test_cli_archive.py  test_cli_cast.py  test_cli_encrypt.py  test_cli_freeze.py  test_cli_group.py  test_cli_inject.py  test_cli_pin.py  test_cli_profile.py  test_cli_require.py  test_cli_sanitize.py  test_cli_score.py  test_cli_split.py  test_cli_stack.py  test_cli_strip.py  test_cli_typecheck.py  test_cloner.py  test_comparator.py  test_converter.py  test_deduplicator.py  test_defaults.py  test_differ.py  test_differ_filter.py  test_differ_summary.py  test_duplicates.py  test_encryptor.py  test_exporter.py  test_flattener.py  test_formats.py  test_freezer.py  test_grouper.py  test_hooks.py  test_injector.py  test_interpolator.py  test_linter.py  (+25 more)
